<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aboutUsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    tools:context=".view.AboutUsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/aboutUsDeveloper"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about_us_developer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextAppearance.Material3.TitleMedium"
        android:id="@+id/aboutUsVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/about_us_app_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUsDeveloper" />

    <TextView
        android:id="@+id/aboutUsLicense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/about_license"
        style="@style/TextAppearance.Material3.BodyMedium"
        app:layout_constraintTop_toBottomOf="@+id/aboutUsVersion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>